:beetle: fix tooltip table size too big

--- a/sass/css/kbd-tooltip.sass
+++ b/sass/css/kbd-tooltip.sass
@@ -2,7 +2,7 @@
   position     	: fixed !important
   display      	: none
   z-index      	: 1
-  font-size    	: 0.9em
+  // font-size 	: 0.9em // defined by theme
   // animation 	: fadeIn 0.6s
   left         	: 8px
   top          	: 8px
